unpackaged/main/default/objects/legaldeskapp__LegalDesk_Rule_Trigger__mdt/legaldeskapp__LegalDesk_Rule_Trigger__mdt.object-meta.xml
<CustomObject>
    <description>Custom Metadata Type object to store a Form Rule&#39;s Trigger metadata</description>
    <label>Streamline Rule Trigger</label>
    <pluralLabel>LegalDesk Rule Triggers</pluralLabel>
</CustomObject>