unpackaged/main/default/objects/legaldeskapp__LegalDesk_Rule_Trigger__mdt/fields/legaldeskapp__Comparator__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Comparator__c</fullName>
    <description>Custom field to store the Comparator attriibute value for a Streamline AI Form Rule Trigger</description>
    <label>Comparator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>&gt;</fullName>
                <default>true</default>
                <label>&gt;</label>
            </value>
            <value>
                <fullName>&gt;=</fullName>
            </value>
            <value>
                <fullName>===</fullName>
            </value>
            <value>
                <fullName>!==</fullName>
            </value>
            <value>
                <fullName>&lt;=</fullName>
            </value>
            <value>
                <fullName>&lt;</fullName>
            </value>
            <value>
                <fullName>is</fullName>
            </value>
            <value>
                <fullName>isNot</fullName>
            </value>
            <value>
                <fullName>includes</fullName>
            </value>
            <value>
                <fullName>includesNot</fullName>
            </value>
            <value>
                <fullName>before</fullName>
            </value>
            <value>
                <fullName>after</fullName>
            </value>
            <value>
                <fullName>between</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>