unpackaged/main/default/objects/legaldeskapp__LegalDesk_Rule_Trigger__mdt/fields/legaldeskapp__LegalDesk_Form_Rule__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__LegalDesk_Form_Rule__c</fullName>
    <description>Metadata relationship field that relates this Streamline AI Rule Trigger to a Streamline AI Form Rule custom metadata type record</description>
    <label>Streamline AI Form Rule</label>
    <referenceTo>legaldeskapp__LegalDesk_Form_Rule__mdt</referenceTo>
    <relationshipName>Legal_Desk_Rule_Triggers</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>