unpackaged/main/default/objects/legaldeskapp__LegalDesk_Rule_Trigger__mdt/fields/legaldeskapp__LegalDesk_Trigger_Id__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__LegalDesk_Trigger_Id__c</fullName>
    <description>Custom field to store the Trigger Id value of Form RuleTrigger</description>
    <label>LegalDesk Trigger Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>