unpackaged/main/default/objects/legaldeskapp__LegalDesk_Rule_Trigger__mdt/fields/legaldeskapp__Value__c.field-meta.xml
<CustomField>
    <fullName>legaldeskapp__Value__c</fullName>
    <description>Custom field to store the &quot;Value&quot; attribute for a Form Rule Trigger. This value is the triggering value of the trigger field.</description>
    <label>Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>